# temenos

./: CHANGELOG.md  README.md  evaluation.md  macos_plan.md  plan.md  platform_roadmap.md  pyproject.toml
docs/: README.md  agents.md  cli.md  concepts.md  configuration.md  images.md  python-api.md  security.md
examples/: README.md  claude_mcp_config.json  python_api.py
scripts/: doctor.py  gvisor_spike.py  memory_spike.py
temenos/: __init__.py  box.py  cli.py  exceptions.py  image.py  manager.py  policy.py  project.py  result.py  storage.py
temenos/backends/: __init__.py  base.py  gvisor.py  oci.py
temenos/server/: __init__.py  app.py  client.py  mcp.py
tests/: conftest.py  test_cli.py  test_cli_project.py  test_image.py  test_image_mmdebstrap.py  test_manager.py  test_mcp.py  test_policy.py  test_project.py  test_result.py  test_server.py  test_storage.py
tests/leak/: test_leak.py
tests/test_backends/: test_gvisor.py
