[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "temenos"
version = "0.1.0"
description = "Untrusted-code containment for a trusted agent — named gVisor boxes with a Python-native policy"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Apache-2.0" }
# Core has zero runtime deps; isolation is the `runsc` binary (detected at runtime).
dependencies = []

[project.optional-dependencies]
mcp = ["mcp", "fastapi", "uvicorn"]            # MCP + REST daemon surface
cli = ["click", "rich", "httpx"]               # CLI surface
all = ["temenos[mcp,cli]"]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy"]

[project.scripts]
temenos = "temenos.cli:main"                    # only meaningful with the [cli] extra

[tool.hatch.build.targets.wheel]
packages = ["temenos"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
