[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "temenos"
version = "0.1.0"
description = "Untrusted-code containment for a trusted agent — named gVisor boxes with a Python-native policy"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Apache-2.0" }
keywords = ["sandbox", "gvisor", "agent", "mcp", "claude", "containment", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
# Core has zero runtime deps; isolation is the `runsc` binary (detected at runtime).
dependencies = []

[project.optional-dependencies]
# The daemon (REST + per-box MCP) and the CLI's daemon client. The CLI itself is stdlib
# argparse; `httpx` is only needed by the project commands that talk to the daemon, which
# (via auto-spawn of `temenos serve`) also pulls fastapi/uvicorn/mcp. So the project flow
# and `temenos claude` want `[all]`; the pure `temenos image …` commands need nothing extra.
daemon = ["fastapi", "uvicorn", "mcp>=1.0", "httpx"]
all = ["temenos[daemon]"]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy"]

[project.urls]
Homepage = "https://github.com/quilter-ai/temenos"
Source = "https://github.com/quilter-ai/temenos"

[project.scripts]
temenos = "temenos.cli:main"                    # `temenos image …` works bare; rest need [all]

[tool.hatch.build.targets.wheel]
packages = ["temenos"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
